# pyrightfixer

./: .gitignore  Makefile  pyproject.toml  readme.md
pyrightfixer/: cli.py
pyrightfixer/lib/: files.py  pyright.py  pyright_run.py
pyrightfixer/lib/process_errors/: file_actions.py  processor.py  report_deprecated_errors.py  step.py
pyrightfixer/lib/process_errors/steps/: report_deprecated_errors.py  report_general_type_issues.py  report_implicit_string_concatenation.py  report_incompatible_method_override.py  report_incompatible_variable_override.py  report_incomplete_stub.py  report_invalid_type_arguments.py  report_missing_type_argument.py  report_self_cls_paramenter_name.py  report_undefined_variable.py  report_unknown_parameter_type.py  report_unsupported_dunder_all.py  report_unused.py  step_base.py
samples/: sample_wrapper.py
samples/report_deprecated/: chainmap.py  counter.py  defaultdict.py  deque.py  dict.py  frozenset.py  list.py  long_examples.py  optional.py  ordered_dict.py  set.py  tuple.py  type.py  union.py
tests/lib/files/: test_get_file_list.py
tests/samples/: reportDeprecated.py
tests/samples/report_deprecated/: chainmap.py  counter.py  defaultdict.py  deque.py  dict.py  frozenset.py  list.py  long_examples.py  optional.py  ordered_dict.py  set.py  tuple.py  type.py  union.py
